--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0",
     "styled-components": "^3.1.0-3",
-    "material-ui": "0.20.0"
+    "material-ui": "0.20.0",
+    "font-awesome": "4.7.0",
+    "url-loader": "0.6.2",
+    "file-loader": "1.1.6"
   },
   "devDependencies": {
     "webpack": "3.10.0",
